# Claudemd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session_start.sh
backend/: requirements.txt
backend/app/: crud.py  database.py  excel_generator.py  main.py  models.py  numero_por_extenso.py  pdf_generator.py  schemas.py  seed.py
backend/app/routers/: catalogo.py  itens_preco.py  orcamentos.py
backend/tests/: test_api.py
dashboard/: index.html
data/: extrato_exemplo.csv
demos/: enxame.html
docs/: SKILLS.md
frontend/: app.js  index.html  style.css
orcafacil/: __init__.py  analytics.py  categorizer.py  cli.py  models.py  parser.py
scripts/: gerar_dados.py
tests/: test_analytics.py  test_categorizer.py  test_parser.py
