[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orcafacil"
version = "1.0.0"
description = "Motor de análise de finanças pessoais com categorização automática e insights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OrçaFácil" }]
keywords = ["financas", "orcamento", "analytics", "brasil"]

[project.scripts]
orcafacil = "orcafacil.cli:main"

[tool.setuptools]
packages = ["orcafacil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
